--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,28 @@
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/community_db
+    username: admin
+    password: 1234
+    driver-class-name: org.postgresql.Driver
+
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
         show_sql: true
 
-    datasource:
-      url: jdbc:postgresql://localhost:5432/community_db
-      username: admin
-      password: 1234
-      driver-class-name: org.postgresql.Driver
-#  datasource:
-#    url: jdbc:h2:mem:authentication_example
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2-console
+  #  datasource:
+  #    url: jdbc:h2:mem:authentication_example
+  #    username: sa
+  #    password:
+  #    driver-class-name: org.h2.Driver
+  #  h2:
+  #    console:
+  #      enabled: true
+  #      path: /h2-console
+
   security:
     user:
       password: 1
@@ -37,4 +39,5 @@ springdoc:
     disable-swagger-default-url: true
   api-docs:
     groups:
-      enabled: true
+      - name: community
+        packages-to-scan: com.han.springcommunity
